@@ -14,6 +14,8 @@ Changes
 Fixes
 -----
 
+ - Fixed casting issue in the Monitoring query.
+
  - Fixed issue that caused the cluster view to not redirect
    to the first node by default. 
 
